move auth api on openapi
