# server/src/main/java/ru/itmo/is/controller/AuthController.java
@@ -1,49 +1,50 @@
 package ru.itmo.is.controller;
 
-import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import org.springframework.web.bind.annotation.*;
-import ru.itmo.is.dto.request.LoginRequest;
-import ru.itmo.is.dto.request.PasswordChangeRequest;
-import ru.itmo.is.dto.request.RegisterRequest;
-import ru.itmo.is.dto.response.ProfileResponse;
-import ru.itmo.is.dto.OneFieldDto;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+import ru.itmo.is.api.AuthApi;
+import ru.itmo.is.dto.OneFieldString;
+import ru.itmo.is.dto.ProfileResponse;
+import ru.itmo.is.dto.LoginRequest;
+import ru.itmo.is.dto.RegisterRequest;
 import ru.itmo.is.entity.user.User;
-import ru.itmo.is.security.RolesAllowed;
 import ru.itmo.is.security.Anonymous;
+import ru.itmo.is.security.RolesAllowed;
 import ru.itmo.is.service.AuthService;
 
 @RestController
-@RequestMapping("/auth")
 @RequiredArgsConstructor
-public class AuthController {
+public class AuthController implements AuthApi {
     private final AuthService authService;
 
-    @Anonymous
-    @PostMapping("/register")
-    public OneFieldDto<String> register(@RequestBody @Valid RegisterRequest req) {
-        return authService.register(req);
+    @Override
+    public ResponseEntity<Void> changePassword(ru.itmo.is.dto.PasswordChangeRequest passwordChangeRequest) {
+        authService.changePassword(passwordChangeRequest);
+        return ResponseEntity.ok().build();
     }
 
-    @Anonymous
-    @PostMapping("/login")
-    public OneFieldDto<String> login(@RequestBody @Valid LoginRequest req) {
-        return authService.login(req);
+    @Override
+    public ResponseEntity<ProfileResponse> getProfile() {
+        return ResponseEntity.ok(authService.getProfile());
     }
 
+    @Override
+    @Anonymous
+    public ResponseEntity<OneFieldString> login(LoginRequest loginRequest) {
+        return ResponseEntity.ok(authService.login(loginRequest));
+    }
+
+    @Override
+    @Anonymous
+    public ResponseEntity<OneFieldString> register(RegisterRequest registerRequest) {
+        return ResponseEntity.ok(authService.register(registerRequest));
+    }
+
+    @Override
     @RolesAllowed(User.Role.MANAGER)
-    @PostMapping("/register-other")
-    public void registerOther(@RequestBody @Valid RegisterRequest req) {
-        authService.registerOther(req);
-    }
-
-    @PostMapping("/change-password")
-    public void changePassword(@RequestBody @Valid PasswordChangeRequest req) {
-        authService.changePassword(req);
-    }
-
-    @GetMapping("/profile")
-    public ProfileResponse getProfile() {
-        return authService.getProfile();
+    public ResponseEntity<Void> registerOther(RegisterRequest registerRequest) {
+        authService.registerOther(registerRequest);
+        return ResponseEntity.ok().build();
     }
 }
