# server/src/main/java/ru/itmo/is/mapper/UserMapper.java
@@ -4,7 +4,7 @@ import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingConstants;
 import org.mapstruct.Named;
-import ru.itmo.is.dto.request.RegisterRequest;
+import ru.itmo.is.dto.RegisterRequest;
 import ru.itmo.is.entity.user.User;
 import ru.itmo.is.security.PasswordManager;
 
