# server/src/main/resources/openapi/specification.yaml
@@ -1,17 +1,121 @@
 openapi: 3.0.3
 
 info:
-  title: Dormitory system
+  title: 'Dormitory system'
   version: 1.0.0
 
 servers:
   - url: http://localhost:8183
 
 tags:
+  - name: Auth
+    description: 'Methods for users authentication'
   - name: File
     description: 'Methods for saving and getting files'
 
 paths:
+  /auth/register:
+    post:
+      summary: 'Register new user and get token'
+      operationId: register
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegisterRequest'
+      responses:
+        200:
+          description: 'User registered successfully'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OneFieldString'
+        400:
+          description: 'Invalid request body'
+        401:
+          description: 'No rights to register manager'
+        409:
+          description: 'User with this login already exists'
+  /auth/login:
+    post:
+      summary: 'Authorize user by login and password and get token'
+      operationId: login
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginRequest'
+      responses:
+        200:
+          description: 'User successfully authorized, token returned'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OneFieldString'
+        401:
+          description: 'Invalid credentials'
+  /auth/register-other:
+    post:
+      summary: 'Register another user. Access only for managers'
+      operationId: registerOther
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegisterRequest'
+      responses:
+        200:
+          description: 'User successfully registered'
+        400:
+          description: 'Invalid request body'
+        401:
+          description: "Unauthorized"
+        403:
+          description: 'No rights'
+  /auth/change-password:
+    post:
+      summary: 'Change account password'
+      operationId: changePassword
+      tags:
+        - Auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PasswordChangeRequest'
+      responses:
+        200:
+          description: 'Password was successfully changed'
+        400:
+          description: 'Invalid request body or old password does not match'
+        401:
+          description: 'Unauthorized'
+  /auth/profile:
+    get:
+      summary: 'Get self profile info'
+      operationId: getProfile
+      tags:
+        - Auth
+      responses:
+        200:
+          description: 'Profile info'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileResponse'
+        401:
+          description: 'Unauthorized'
+
   /file/upload:
     post:
       summary: 'Upload file on server'
@@ -23,31 +127,24 @@ paths:
         content:
           multipart/form-data:
             schema:
-              type: object
-              required:
-                - file
-              properties:
-                file:
-                  type: string
-                  format: binary
+              $ref: "#/components/schemas/FileRequest"
             encoding:
               file:
                 contentType: application/octet-stream
       responses:
         200:
-          description: File uploaded successfully
+          description: 'File uploaded successfully'
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/OneFieldString"
         400:
-          description: Parameter file not found in request
+          description: 'Parameter file not found in request'
         500:
-          description: Error while saving file
-
+          description: 'Error while saving file'
   /file/download/{key}:
     get:
-      summary: Download file by key
+      summary: 'Download file by key'
       operationId: downloadFile
       tags:
         - File
@@ -59,10 +156,10 @@ paths:
             type: string
       responses:
         200:
-          description: File found and returned successfully
+          description: 'File found and returned successfully'
           headers:
             Content-Disposition:
-              description: Attachment filename
+              description: 'Attachment filename'
               schema:
                 type: string
           content:
@@ -71,7 +168,7 @@ paths:
                 type: string
                 format: binary
         404:
-          description: File not found
+          description: 'File not found'
 
 components:
   schemas:
@@ -82,3 +179,72 @@ components:
       properties:
         data:
           type: string
+    UserRole:
+      type: string
+      enum:
+        - NON_RESIDENT
+        - RESIDENT
+        - MANAGER
+        - GUARD
+    LoginRequest:
+      type: object
+      required:
+        - login
+        - password
+      properties:
+        login:
+          type: string
+        password:
+          type: string
+    RegisterRequest:
+      allOf:
+        - $ref: '#/components/schemas/LoginRequest'
+        - type: object
+          required:
+            - name
+            - surname
+            - role
+          properties:
+            name:
+              type: string
+            surname:
+              type: string
+            role:
+              $ref: '#/components/schemas/UserRole'
+    PasswordChangeRequest:
+      type: object
+      required:
+        - oldPassword
+        - newPassword
+      properties:
+        oldPassword:
+          type: string
+        newPassword:
+          type: string
+    ProfileResponse:
+      type: object
+      required:
+        - name
+        - surname
+        - role
+      properties:
+        name:
+          type: string
+        surname:
+          type: string
+        role:
+          $ref: '#/components/schemas/UserRole'
+        university:
+          type: string
+        dormitory:
+          type: string
+        roomNumber:
+          type: integer
+    FileRequest:
+      type: object
+      required:
+        - file
+      properties:
+        file:
+          type: string
+          format: binary
